--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -304,6 +304,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\documents\FeatureSearchHandler.vb" />
+    <Compile Include="pages\dockWindow\tools\TaskListWindow.Designer.vb">
+      <DependentUpon>TaskListWindow.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\tools\TaskListWindow.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\tools\OutputWindow.Designer.vb">
       <DependentUpon>OutputWindow.vb</DependentUpon>
     </Compile>
@@ -537,6 +543,9 @@
       <DependentUpon>frmStartPage.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\base\ToolWindow.resx" />
+    <EmbeddedResource Include="pages\dockWindow\tools\TaskListWindow.resx">
+      <DependentUpon>TaskListWindow.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="pages\toolkit\PageMoleculeNetworking.resx">
       <DependentUpon>PageMoleculeNetworking.vb</DependentUpon>
     </EmbeddedResource>
