--- a/src/assembly/assembly/test/test.vbproj
+++ b/src/assembly/assembly/test/test.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EE77E974-0120-4D75-BCA5-953B4F56D6E3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>test.read_mzXML</StartupObject>
+    <StartupObject>test.read_imzML</StartupObject>
     <RootNamespace>test</RootNamespace>
     <AssemblyName>test</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -116,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Module1.vb" />
+    <Compile Include="read_imzML.vb" />
     <Compile Include="read_mzXML.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
