--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -383,6 +383,7 @@
     <Compile Include="ASCII\MSP\MspData.vb" />
     <Compile Include="MarkupData\Base64Decode.vb" />
     <Compile Include="MarkupData\imzML\XML\XML.vb" />
+    <Compile Include="MarkupData\CompressionMode.vb" />
     <Compile Include="MarkupData\mzML\RawScanParser.vb" />
     <Compile Include="MarkupData\mzML\ExtractUVData.vb" />
     <Compile Include="MarkupData\mzML\XML\BinaryData.vb" />
