--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -331,6 +331,18 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="pages\dockWindow\documents\FeatureSearchHandler.vb" />
+    <Compile Include="pages\dockWindow\explorer\frmUVScans.Designer.vb">
+      <DependentUpon>frmUVScans.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmUVScans.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmTreeExplorer.Designer.vb">
+      <DependentUpon>frmTreeExplorer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmTreeExplorer.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\frmDemo.Designer.vb">
       <DependentUpon>frmDemo.vb</DependentUpon>
     </Compile>
@@ -580,6 +592,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\explorer\frmRawFeaturesList.resx">
       <DependentUpon>frmRawFeaturesList.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\explorer\frmTreeExplorer.resx">
+      <DependentUpon>frmTreeExplorer.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\explorer\frmUVScans.resx">
+      <DependentUpon>frmUVScans.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmSettings.resx">
       <DependentUpon>frmSettings.vb</DependentUpon>
