--- a/src/metadb/Massbank/Massbank.vbproj
+++ b/src/metadb/Massbank/Massbank.vbproj
@@ -332,6 +332,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Public\lipidMAPS\MetaTable.vb" />
     <Compile Include="Public\NCBI\PubChemDescriptorRepo.vb" />
     <Compile Include="SDFExtensions.vb" />
     <Compile Include="MetaLib\Match\ComparesIdXrefInteger.vb" />
