add namespace docs

--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -520,6 +520,7 @@
     <Compile Include="MarkupData\mzML\XML\Configurations.vb" />
     <Compile Include="mzData\Binary\BinaryStreamWriter.vb" />
     <Compile Include="mzData\Binary\BinaryStreamReader.vb" />
+    <Compile Include="mzData\Binary\NamespaceDoc.vb" />
     <Compile Include="mzData\Stream\MSScan.vb" />
     <Compile Include="UnifyReader\Chromatogram.vb" />
     <Compile Include="UnifyReader\imzMLScan.vb" />
