--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -332,6 +332,12 @@
     <Compile Include="pages\dockWindow\documents\frmGCMS_CDFExplorer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmGCMSPeaks.Designer.vb">
+      <DependentUpon>frmGCMSPeaks.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\explorer\frmGCMSPeaks.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\explorer\ToolStripSpringTextBox.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -608,6 +614,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\explorer\frmFileExplorer.resx">
       <DependentUpon>frmFileExplorer.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\explorer\frmGCMSPeaks.resx">
+      <DependentUpon>frmGCMSPeaks.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\explorer\frmRawFeaturesList.resx">
       <DependentUpon>frmRawFeaturesList.vb</DependentUpon>
